--- a/src/json/dvorak_layout.json.erb
+++ b/src/json/dvorak_layout.json.erb
@@ -1,6 +1,6 @@
 {
     <%
-        optional_modifiers = ["caps_lock","left_command","left_control","left_alt","right_command","right_control","right_alt"]
+        optional_modifiers = ["caps_lock","left_command","left_control","left_option","right_command","right_control","right_option"]
         remap_source_keys = [
 			"grave_accent_and_tilde","1","2","4","5","6","7","8","9","0","hyphen","equal_sign",
 			"q","w","e","r","t","y","u","i","o","p","open_bracket","close_bracket","backslash",
